Fixed styles
Frankly, hiding the navigation while clever is not useful.
Additionally, the line length was too long and the font size too small
(in my opinion). Lastly, the content didn’t need a box around it, less
is more.

--- a/wikipedia-beautifier.css
+++ b/wikipedia-beautifier.css
@@ -15,8 +15,9 @@
  *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+
 #mw-head, #mw-panel {
-    opacity: 0;
+    /*opacity: 0;*/
     -webkit-transition: all 400ms ease-in-out !important;
 }
 
@@ -26,7 +27,7 @@
 
 #firstHeading {
     font-family: "minion-pro-1", "minion-pro-2", Palatino, Georgia, "Times New Roman", serif;
-    width: 900px;
+    width: 630px;
     margin-left: auto;
     margin-right: auto;
     padding-top: 0.25em;
@@ -38,15 +39,15 @@
 
 #bodyContent {
     line-height: 1.55em;
-    font-size: 1.0em;
+    font-size: 1.3em;
     font-family: "minion-pro-1", "minion-pro-2", Palatino, Georgia, "Times New Roman", serif;
-    border: 1px solid #ccc;
-    width: 800px;
-    padding: 50px;
+    /*border: 1px solid #ccc;*/
+    width: 630px;
+    /*padding: 50px;*/
     margin-left: auto;
     margin-right: auto;
     margin-top: 1em;
-    background: #fbfbfb;
+ /*   background: #fbfbfb;*/
 }
 
 .infobox,
